--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-torch==1.5.0
-torchvision==0.6.0 
-pytorch-lightning==0.8.5
+torch==1.6.0
+pytorch-lightning==0.9.0
+
+black
+isort
+
+pytest
+pytest-cov
+
+pre-commit
