--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,7 +7,9 @@ name: Lint
 on: 
   push:
     branches:
+      - master
       - feature/*
+      - hotfix/*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
