--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -6,9 +6,10 @@ name: Lint
 # events but only for the master branch
 on: 
   push:
-    - master
-    - feature*
-    - hotfix*
+    branches:
+      - master
+      - feature/*
+      - hotfix/*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,7 +35,6 @@ jobs:
                   pip3 install --upgrade pip setuptools
                   pip3 install black --no-cache --user
                   pip3 install isort --no-cache --user                  
-                  pip3 install -r requirements.txt --user
 
             - name: apply isort
               run: python3 -m isort .
