feat: Implement inference part

--- a/conf/model/AE.yml
+++ b/conf/model/AE.yml
@@ -6,4 +6,7 @@ params:
   encoder_output_size: 1024  # 64 * 4 * 4
   max_epochs: 20
   lr: 1e-4
+ckpt:
+  path: "checkpoints/AE"
+  filename: "epoch=19.ckpt"
   
